fix jumping in team section

--- a/_source/_sass/partials/components/_headshot.scss
+++ b/_source/_sass/partials/components/_headshot.scss
@@ -12,7 +12,7 @@
   border-radius: 50%;
   &:hover,
   &:focus {
-    border: 1px solid $blue;
+    // border: 1px solid $blue;
   }
 }
 .headshot__name {
